jspp/src/parse.c
#ifdef HAVE_CONFIG_H
#include <jspp/config.h>
#endif
#include <stdio.h>
#include <stdlib.h>
#include <spl/debug.h>
#include <jspp/parse.h>
#include <jspp/lex.h>
#include <jspp/parse.h>
#include <spl/cstring.h>
#include <jspp/parseerrors.h>

extern vardef *createVar( const char *name, const bool isstatic, const enum ArgSource, const bool isptr );
extern void deleteVar( const vardef *vdp );

static void stmtblock( jspplex *lex, program *pp );
static void localvar( jspplex *lex, program *pp );
static void expr( jspplex *lex, program *pp );
static void factor( jspplex *lex, program *pp );
static void term( jspplex *lex, program *pp );
static void stmts( jspplex *lex, program *pp );
static void new_expr( jspplex *lex, program *pp );


static vardef *symtabLookup( program *pp, const char *id )
{
	int x;
	symtab *stp;
	vardef *vdp;
	int len = (int)strlen(id);

	for ( x = vectorCount( pp->symstack )-1; x >= 0 ; x-- )
	{
		stp = (symtab *)vectorElementAt( pp->symstack, x );
		vdp = (vardef *)hashtableGetChar( stp->syms, id, len );
		if ( NULL != vdp )
		{
			ASSERT_MEM( vdp, sizeof(struct vardef) );
			return vdp;
		}
	}
	/* try the class */
	vdp = jsclassFindField( pp->curclass, id );
	return vdp;
}

static bool symtabEnter( program *pp, const int patchupPc )
{
	symtab *stp;
	stp = (symtab *)malloc( sizeof(struct symtab) );
	if ( NULL == stp )
	{
		return false;
	}
	stp->symlist = vectorConstruct( sizeof(vardef *) );
	if ( NULL == stp->symlist )
	{
		free( stp );
		return false;
	}
	stp->syms = hashtableConstruct();
	if ( NULL == stp->syms )
	{
		vectorDestruct( stp->symlist );
		free( stp );
		return false;
	}
	if ( vectorPeek( pp->symstack ) == NULL )
	{
		stp->cumulative = 0;
	}
	else
	{
		stp->cumulative = ((symtab *)vectorPeek( pp->symstack ))->cumulative;
	}
	stp->count = 0;
	stp->patchupPc = patchupPc;
	return vectorAdd( pp->symstack, &stp );
}

static int symtabExit( program *pp )
{
	int x;
	int count;
	int veccount;
	symtab *stp = vectorPop( pp->symstack );

	ASSERT_MEM( stp, sizeof(struct symtab) );
	ASSERT( stp->patchupPc != -1 );
	programEmitArgAt( pp, stp->patchupPc, stp->count );
	count = stp->count;
	veccount = vectorCount( stp->symlist );
	for ( x = 0; x < veccount; x++ )
	{
		vardef *vdp = (vardef *)vectorElementAt( stp->symlist, x );
		deleteVar( vdp );
	}

	hashtableDestruct( stp->syms );
	vectorDestruct( stp->symlist );
	free( stp );

	return count;
}

/*static int symtabLocalCount( program *pp )
{
	symtab *stp = vectorPeek( pp->symstack );
	ASSERT_MEM( stp, sizeof(struct symtab) );
	return stp->count;
}*/

static vardef *symtabNote( program *pp, const char *name, const bool isptr )
{
	symtab *stp = vectorPeek( pp->symstack );
	vardef *vdp = createVar( name, false, MODE_BLOCK, isptr );
	if ( NULL == vdp )
	{
		return NULL;
	}
	vdp->isauto = true;
	vdp->offset = stp->cumulative;
	stp->cumulative++;
	stp->count++;
	vectorAdd( stp->symlist, &vdp );
	hashtableAdd( stp->syms, vdp->name, vdp );
	
	return vdp;
}

static void setupError( const jspplex *lex, program *ilp, const int parseerror )
{
	char buf[512];
	char *msg;

	ilp->errorline = lex->lineno;

	if ( lex->token == LEXERROR )
	{
		ilp->errornum = atoi( lex->lex );
		switch ( ilp->errornum )
		{
		case LEX_INVALID_NUMBER_FORMAT:
			msg = "invalid number format";
			break;
		case LEX_UNEXPECTED_ESCAPE:
			msg = "unexpected escape sequence";
			break;
		case LEX_UNTERMINATED_CHAR:
			msg = "unterminated char";
			break;
		case LEX_UNTERMINATED_STRING:
			msg = "unterminated string";
			break;
		case LEX_ERROR:
			msg = "internal error";
			break;
		default:
			msg = "unknown error";
			break;
		}
		sprintf(buf, "ERROR in lexical analysis of '%s' on line %d\n%s\n", lex->lex, ilp->errorline, msg );
	}
	else
	{
		ilp->errornum = parseerror;
		switch ( ilp->errornum )
		{
		case YYER_EXPECTED_CLASS_DEF:
			msg = "expected class definition";
			break;
		case YYER_EXPECTED_CLASS_NAME:
			msg = "expected class name";
			break;
		case YYER_OUT_OF_MEM:
			msg = "out of memory";
			break;
		case YYER_EXPECTED_SUPER_CLASS:
			msg = "expected base class name";
			break;
		case YYER_EXPECTED_LBRACE:
			msg = "expected '{'";
			break;
		case YYER_EXPECTED_RBRACE:
			msg = "expected '}'";
			break;
		case YYER_EXPECTED_METHOD_NAME:
			msg = "expected method name";
			break;
		case YYER_EXPECTED_LPAR:
			msg = "expected '('";
			break;
		case YYER_EXPECTED_RPAR:
			msg = "expected ')'";
			break;
		case YYER_EXPECTED_VAR_NAME:
			msg = "expected variable name";
			break;
		case YYER_EXPECTED_SEMI:
			msg = "expected semi colon";
			break;
		case YYER_ASSIGN_SYNTAX:
			msg = "assignment syntax error";
			break;
		case YYER_NEW_SYNTAX:
			msg = "'new' operator syntax error";
			break;
		case YYER_EXPECTED_ARRAY_INDEX:
			msg = "expected array index";
			break;
		case YYER_EXPECTED_RBRAC:
			msg = "expected ']'";
			break;
		case YYER_EXPECTED_COMMA:
			msg = "expected ','";
			break;
		case YYERR_SYNTAX:
			msg = "syntax error";
			break;
		case YYER_EXPECTED_ID:
			msg = "expected identifier";
			break;
		case YYER_EXPECTED_COLON:
			msg = "expected ':'";
			break;
		case YYER_EXPECTED_CATCH:
			msg = "expected 'catch'";
			break;
		case YYER_UNKNOWN_CLASS:
			msg = "undefined class name";
			break;
		case YYER_EXPECTED_SCOPE_OP:
			msg = "expected '::'";
			break;
		case YYER_EXPECTED_ACCESS:
			msg = "expected public, protected, or private";
			break;
		case YYER_UNKNOWN_METHOD:
			msg = "undefined method name";
			break;
		case YYER_UNKNOWN_ID:
			msg = "undefined indentifier";
			break;
		case YYER_ILLEGAL_STATIC_REF:
			msg = "illegal static reference";
			break;
		case YYER_INVALID_ARRAY_INDEX:
			msg = "invalid array index";
			break;
		case YYER_INST_REF_IN_STATIC:
			msg = "instance method cannot be called from static method";
			break;
		case YYER_EXPECTED_VAR_OR_CLASS:
			msg = "expected var or class";
			break;
		case YYER_ILLEGAL_CASE_VALUE:
			msg = "illegal case value";
			break;
		case YYER_ILLEGAL_ARRAY_INIT:
			msg = "illegal array initializer";
			break;
		case YYER_METH_RETURNS_VAL:
			msg = "Method must return a value";
			break;
		default:
			msg = "unknown error";
			break;
		}
		sprintf(buf, "ERROR parsing of '%s' on line %d\n%s\n", lex->lex, ilp->errorline, msg );
	}
	ilp->errmsg = stringConstructChar( buf );
}

static void delop( jspplex *lex, program *ilp )
{
	/*string *idname = stringConstructChar( lex->lex );
	if ( NULL == idname )
	{
		setupError( lex, ilp, YYER_OUT_OF_MEM );
		return;
	}*/

	if ( ID != lex->token )
	{
		setupError( lex, ilp, YYER_EXPECTED_ID );
		return;
	}
	jsppLex( lex );
}

/*
arglist		: literal [COMMA arglist]-
			| ID [COMMA arglist]-
			;
 */
static int arglist_call
( 
	jspplex *lex, 
	program *pp, 
	jsclass *jsp,
	const string *methname,
	const bool basecall,
	const bool constructor
)
{
	string *sig;
	int argcount = 0;

	ASSERT( LPAR != lex->token );
	
	if ( NULL == jsp )
	{
		/*
		* instance call -- this is on the stack
		*/

		sig = stringConstructDup( methname );
		if ( NULL == sig )
		{
			setupError( lex, pp, YYER_OUT_OF_MEM );
			return -1;
		}
		if ( ! stringAppendChar(sig, ":Ivv" ) )
		{
			setupError( lex, pp, YYER_OUT_OF_MEM );
			return -1;
		}
	}
	else
	{
		/* static call */
		jsclassValidateMem( jsp );

		sig = stringConstructDup( jsp->name );
		if ( NULL == sig )
		{
			setupError( lex, pp, YYER_OUT_OF_MEM );
			return -1;
		}
		if ( ! stringAppendChar( sig, "." ) )
		{
			setupError( lex, pp, YYER_OUT_OF_MEM );
			return -1;
		}
		if ( ! stringAppend( sig, methname ) )
		{
			setupError( lex, pp, YYER_OUT_OF_MEM );
			return -1;
		}
		if ( ! stringAppendChar(sig, ":Sv" ) )
		{
			setupError( lex, pp, YYER_OUT_OF_MEM );
			return -1;
		}
	}
	while ( RPAR != lex->token )
	{
		argcount++;
		if ( ! constructor )
		{
			stringAppendChar( sig, "v" );
		}
		expr( lex, pp );
		
		if ( COMMA != lex->token && lex->token != RPAR )
		{
			setupError( lex, pp, YYER_EXPECTED_COMMA );
			return -1;
		}
		if ( COMMA == lex->token )
		{
			jsppLex( lex );
		}
	}
	if ( RPAR != lex->token )
	{
		setupError( lex, pp, YYER_EXPECTED_RPAR );
		return -1;
	}
	if ( NULL == jsp )
	{
		if ( basecall )
		{
			programEmit2( pp, OP_BASECALL, MODE_CONST, MODE_IM );
		}
		else if ( constructor )
		{
			programEmit2( pp, OP_CONSTRUCT, MODE_CONST, MODE_IM );
		}
		else
		{
			programEmit2( pp, OP_CALL, MODE_CONST, MODE_IM );
		}
	}
	else
	{
		ASSERT( false == basecall );
		programEmit1( pp, OP_SCALL, MODE_CONST );
	}
	programEmitArg( pp, programEmitConstChars( pp, sig->cstr ) );
	if ( NULL == jsp )
	{
		programEmitArg( pp, argcount );
	}
	stringDestruct( sig );

	return argcount;
}

static void deref( jspplex *lex, program *pp );

/*
objderef	: ID deref							// class instance field 
			| ID ASSIGN expr
			| ID LPAR arglist_call RPAR deref	// out-of-class method call
			;
 */
static void objderef( jspplex *lex, program *pp )
{
	string *idname;

	if ( ID != lex->token )
	{
		setupError( lex, pp, YYER_EXPECTED_ID );
		return;
	}

	idname = stringConstructChar( lex->lex );
	if ( NULL == idname )
	{
		setupError( lex, pp, YYER_OUT_OF_MEM );
		return;
	}
	if ( ID == lex->token )
	{
		jsppLex( lex );
	}
	else
	{
		setupError( lex, pp, YYER_EXPECTED_ID );
		return;
	}
	if ( LPAR == lex->token )
	{
		/* method call */
		jsppLex(lex);

		arglist_call( lex, pp, NULL, idname, false, false );
		
		if ( RPAR != lex->token )
		{
			setupError( lex, pp, YYER_EXPECTED_RPAR );
			return;
		}
		jsppLex( lex );
		deref( lex, pp );
	}
	else
	{
		/* field */
		programEmit1( pp, OP_DEREF, MODE_CONST );
		programEmitArg( pp, programEmitConstChars( pp, idname->cstr ) );

		if ( ASSIGN == lex->token )
		{
			jsppLex( lex );
			pp->isrhs = true;
			expr( lex, pp );
			programEmit0( pp, OP_RVALUE );
			programEmit0( pp, OP_ASSIGN );
			pp->isrhs = false;
		}
		else
		{
			deref( lex, pp );
		}
	}
	stringDestruct( idname );
}

static void arrayIndexCall( jspplex *lex, program *pp )
{
	int argcount = 0;
	string *sig;

	jsppLex( lex );
	sig = stringConstructChar( "[]:Ivv" );
	if ( NULL == sig )
	{
		setupError( lex, pp, YYER_OUT_OF_MEM );
		return;
	}
	while ( RBRAC != lex->token && 0 == pp->errornum )
	{
		argcount++;
		stringAppendChar( sig, "v" );

		/*if ( ID != lex->token && INT != lex->token )
		{
			stringDestruct( sig );
			setupError( lex, pp, YYER_INVALID_ARRAY_INDEX );
			return;
		}*/
		expr( lex, pp );

		if ( COMMA == lex->token )
		{
			jsppLex( lex );
		}
	}
	if ( RBRAC != lex->token )
	{
		stringDestruct( sig );
		setupError( lex, pp, YYER_EXPECTED_RBRAC );
		return;
	}
	jsppLex( lex );

	programEmit2( pp, OP_CALL, MODE_CONST, MODE_IM );
	programEmitArg( pp, programEmitConstChars( pp, sig->cstr ) );
	programEmitArg( pp, argcount );

	stringDestruct( sig );
}

/*
deref		: DOT objref
			|									
			;
*/
static void deref( jspplex *lex, program *pp )
{
	if ( DOT == lex->token )
	{
		jsppLex( lex );

		if ( ID != lex->token )
		{
			setupError( lex, pp, YYER_EXPECTED_ID );
			return;
		}
		objderef( lex, pp );
	}
	else if ( LBRAC == lex->token )
	{
		arrayIndexCall( lex, pp );
	}
}

static void singletonCallHandler( jspplex *lex, program *pp )
{
	/*
	 *  id is a (local) method or class name
	 */
	string *idname = stringConstructChar( lex->lex );
	if ( NULL == idname )
	{
		setupError( lex, pp, YYER_OUT_OF_MEM );
		return;
	}
	jsppLex( lex );
	if ( SCOPE == lex->token )
	{
		/*
		 *  Static reference or call
		 */
		jsclass *jsp;
		jsp = programFindClass( pp, idname->cstr );
		if ( NULL == jsp )
		{/*
			if ( NULL != pp->intrinsics )
			{
				jsp = programFindClass( pp->intrinsics, idname->cstr );
				if ( NULL == jsp )
				{
					stringDestruct( idname );
					setupError( lex, pp, YYER_UNKNOWN_CLASS );
					return;
				}
			}
			else
			{*/
				stringDestruct( idname );
				setupError( lex, pp, YYER_UNKNOWN_CLASS );
				return;
			/*}*/
		}
		stringDestruct( idname );
		jsppLex( lex );
		if ( ID != lex->token )
		{
			setupError( lex, pp, YYER_EXPECTED_ID );
			return;
		}
		idname = stringConstructChar( lex->lex );
		jsppLex( lex );
		if ( LPAR == lex->token )
		{
			/*
			 *  Static method call
			 */
			jsppLex( lex );
			arglist_call( lex, pp, jsp, idname, false, false );
			if ( RPAR != lex->token )
			{
				setupError( lex, pp, YYER_EXPECTED_RPAR );
				return;
			}
			jsppLex( lex );
		}
		else
		{
			/*
			 *  Static field ref
			 */
			vardef *vdp;

			programEmit2( pp, OP_SDEREF, MODE_CONST, MODE_IM );
			programEmitArg( pp, programEmitConstChars( pp, jsp->name->cstr ) );
			vdp = jsclassFindField( jsp, idname->cstr );
			if ( NULL == vdp )
			{
				setupError( lex, pp, YYER_UNKNOWN_ID );
				return;
			}
			programEmitArg( pp, vdp->offset );
		}
	}
	else if ( LPAR == lex->token )
	{
		/*
		 *  In this case, it's a call to a method in the current class.
		 *  We need to push THIS on the stack.
		 */
		programEmit0( pp, OP_THIS );
		jsppLex(lex);

		arglist_call( lex, pp, NULL, idname, false, false );
		
		if ( RPAR != lex->token )
		{
			setupError( lex, pp, YYER_EXPECTED_RPAR );
			return;
		}
		jsppLex( lex );
	}
	else
	{
		stringDestruct( idname );
		setupError( lex, pp, YYER_UNKNOWN_ID );
		return;
	}
	stringDestruct( idname );
	deref( lex, pp );
	return;
}

static void singletonVarHandler( jspplex *lex, program *pp, const vardef *vdp )
{
	/*
	 *  id is a variable
	 */
	jsppLex( lex );
	if ( pp->curmethod->isstatic && !vdp->isstatic && !vdp->isauto )
	{
		setupError( lex, pp, YYER_INST_REF_IN_STATIC );
		return;
	}
	/*
	 *  Put the variable on the stack
	 */
	programEmit1( pp, OP_LVALUE, vdp->srcmode );
	programEmitArg( pp, vdp->offset );

	if ( LBRAC == lex->token )
	{
		/*
		 *  Array reference
		 */
		arrayIndexCall( lex, pp );
	}
	if ( ASSIGN == lex->token )
	{
		jsppLex( lex );
		pp->isrhs = true;
		expr( lex, pp );
		programEmit0( pp, OP_RVALUE );
		programEmit0( pp, OP_ASSIGN );
		pp->isrhs = false;
	}
	deref( lex, pp );
}

static void arraydef( jspplex *lex, program *pp )
{
	jsclass *jsp = programFindClass( pp/*->intrinsics*/, "Vector" );
	int addidx = programEmitConstChars( pp, "add:Ivvv" );
	int clsidx = programEmitConstChars( pp, "Vector" );

	if ( NULL == jsp )
	{
		setupError( lex, pp, YYER_UNKNOWN_CLASS );
		return;
	}

	/* save a spot for this
	programEmit1( pp, OP_PUSH, MODE_IM );
	programEmitArg( pp, -2 );
	*/
	/* setup the constructor call */

	programEmit1( pp, OP_NEW, MODE_CONST );
	programEmitArg( pp, clsidx );
	
	/* now, THIS is on top of the stack */
	/* copy THIS */
	/*programEmit0( pp, OP_DUP ); */

	/* call constructor */
	programEmit2( pp, OP_CONSTRUCT, MODE_CONST, MODE_IM );
	programEmitArg( pp, clsidx );
	programEmitArg( pp, 0 );

	while ( lex->token != RBRACE && lex->token != JEOF )
	{
		/* copy THIS */
		programEmit0( pp, OP_DUP );

		/* push arg */
		/* there should be an INT, FLOAT, or STRING */
		switch ( lex->token )
		{
		case INT:
			programEmit1( pp, OP_PUSH, MODE_IM );
			programEmitArg( pp, atoi(lex->lex) );
			break;
		case REAL:
			programEmit1( pp, OP_PUSH, MODE_CONST );
			programEmitArg( pp, programEmitConstFloat( pp, (float)atof(lex->lex) ) );
			break;
		case STRING:
			programEmit1( pp, OP_PUSH, MODE_CONST );
			programEmitArg( pp, programEmitConstChars( pp, lex->lex ) );
			break;
		case CHAR:
			programEmit1( pp, OP_PUSH, MODE_CONST );
			programEmitArg( pp, programEmitConstChar( pp, lex->lex[0] ) );
			break;
		case YYTRUE:
			programEmit1( pp, OP_PUSH, MODE_IM );
			programEmitArg( pp, true );
			break;
		case YYFALSE:
			programEmit1( pp, OP_PUSH, MODE_IM );
			programEmitArg( pp, false );
			break;
		case JNULL:
			programEmit0( pp, OP_NULL );
			break;
		default:
			setupError( lex, pp, YYER_ILLEGAL_ARRAY_INIT );
			return;
		}
		jsppLex( lex );
		if ( COMMA == lex->token )
		{
			jsppLex( lex );
		}
		
		/* make the call */
		programEmit2( pp, OP_CALL, MODE_CONST, MODE_IM );
		programEmitArg( pp, addidx );
		programEmitArg( pp, 1 );
	}
	if ( lex->token != RBRACE )
	{
		setupError( lex, pp, YYER_EXPECTED_RBRAC );
		return;
	}
	jsppLex( lex );
}

/*
singleton	: ID deref
			| ID SCOPE ID LPAR arglist RPAR deref	// static method call	
			| ID LPAR arglist_call RPAR deref		// in-class method call
			| ID LBRAC expr RBRAC deref
			| ID ASSIGN expr
			| literal
			| LBRACE expr [expr COMMA]* RBRACE
			| LPAR expr RPAR
			| new_expr
			| SCOPE ID LPAR arglist_call RPAR deref	// base class call
			|
			;
literal		: INT
			| STRING
			| CHAR
			| REAL
			;
 */
static void singleton( jspplex *lex, program *pp )
{
	vardef *vdp;

	switch ( lex->token )
	{
	case ID:
		/*
		*  The current lexum is either: 
		*		- a variable in the current scope
		*		- a class name, followed by a "::"
		*		- or a method in the current class
		*/
		vdp = symtabLookup( pp, lex->lex );
		if ( NULL == vdp )
		{
			singletonCallHandler( lex, pp );
		}
		else
		{
			singletonVarHandler( lex, pp, vdp );
		}
		break;

	case LBRACE:
		/* static array init */
		jsppLex( lex );
		arraydef( lex, pp );
		break;

	case INT:
		programEmit1( pp, OP_PUSH, MODE_IM );
		programEmitArg( pp, atoi(lex->lex) );
		jsppLex( lex );
		break;

	case JNULL:
		programEmit0( pp, OP_NULL );
		jsppLex( lex );
		break;

	case REAL:
		programEmit1( pp, OP_PUSH, MODE_CONST );
		programEmitArg( pp, programEmitConstFloat( pp, (float)atof(lex->lex) ) );
		jsppLex( lex );
		break;

	case STRING:
		programEmit1( pp, OP_PUSH, MODE_CONST );
		programEmitArg( pp, programEmitConstChars( pp, lex->lex ) );
		jsppLex( lex );
		break;

	case CHAR:
		programEmit1( pp, OP_PUSH, MODE_CONST );
		programEmitArg( pp, programEmitConstChar( pp, lex->lex[0] ) );
		jsppLex( lex );
		break;

	case YYTRUE:
		jsppLex( lex );
		programEmit1( pp, OP_PUSH, MODE_IM );
		programEmitArg( pp, true );
		break;

	case YYFALSE:
		jsppLex( lex );
		programEmit1( pp, OP_PUSH, MODE_IM );
		programEmitArg( pp, false );
		break;

	case LPAR:
		jsppLex( lex );
		expr( lex, pp );
		if ( RPAR != lex->token )
		{
			setupError( lex, pp, YYER_EXPECTED_RPAR );
			return;
		}
		jsppLex( lex );
		break;

	case NEW:
		new_expr( lex, pp );
		break;

	case SCOPE:
		{
			/* base class method call */
			string *idname;

			jsppLex( lex );
			if ( ID != lex->token )
			{
				setupError( lex, pp, YYER_EXPECTED_ID );
				return;
			}
			idname = stringConstructChar( lex->lex );
			if ( NULL == idname )
			{
				setupError( lex, pp, YYER_OUT_OF_MEM );
				return;
			}
			jsppLex( lex );
			if ( LPAR != lex->token )
			{
				setupError( lex, pp, YYER_EXPECTED_LPAR );
				stringDestruct( idname );
				return;
			}
			jsppLex(lex);

			programEmit0( pp, OP_THIS );
			arglist_call( lex, pp, NULL, idname, true, false );
			stringDestruct( idname );

			if ( RPAR != lex->token )
			{
				setupError( lex, pp, YYER_EXPECTED_RPAR );
				return;
			}
			jsppLex( lex );
			deref( lex, pp );
		}
		break;

	default:
		setupError( lex, pp, YYERR_SYNTAX );
		break;
	}
}

/*
morefactors	: STAR factor morefactors
			| SLASH factor morefactors
			| MOD factor morefactors
			|
			;
 */
static void morefactors( jspplex *lex, program *pp )
{
	switch( lex->token )
	{
	case STAR:
		jsppLex( lex );
		factor( lex, pp );
		programEmit0( pp, OP_MULT );
		break;
	case SLASH:
		jsppLex( lex );
		factor( lex, pp );
		programEmit0( pp, OP_DIV );
		break;
	case MOD:
		jsppLex( lex );
		factor( lex, pp );
		programEmit0( pp, OP_MOD );
		break;
	case LSHIFT:
		jsppLex( lex );
		factor( lex, pp );
		programEmit0( pp, OP_LSHIFT );
		break;
	case RSHIFT:
		jsppLex( lex );
		factor( lex, pp );
		programEmit0( pp, OP_RSHIFT );
		break;
	default:
		return;
	}
	if ( 0 == pp->errornum )
	{
		morefactors( lex, pp );
	}
}

/*
factor	: MINUS singleton
		| PLUS singleton
		| INC singleton
		| DEC singleton
		| BANG singleton
		| singleton INC
		| singleton DEC
		| singleton
		;
 */
static void factor( jspplex *lex, program *pp )
{
	switch ( lex->token )
	{
	case MINUS:
		jsppLex( lex );
		singleton( lex, pp );
		programEmit0( pp, OP_NEGATE );
		break;
	case PLUS:
		jsppLex( lex );
		singleton( lex, pp );
		break;
	case INC:
		jsppLex( lex );
		singleton( lex, pp );
		programEmit0( pp, OP_INC );
		if ( ! pp->isrhs )
		{
			programEmit0( pp, OP_POP );
		}
		break;
	case DEC:
		jsppLex( lex );
		singleton( lex, pp );
		programEmit0( pp, OP_DEC );
		if ( ! pp->isrhs )
		{
			programEmit0( pp, OP_POP );
		}
		break;
	case BANG:
		jsppLex( lex );
		singleton( lex, pp );
		programEmit0( pp, OP_NOT );
		break;
	default:
		singleton( lex, pp );
		break;
	}
	if ( INC == lex->token )
	{
		jsppLex( lex );
		programEmit0( pp, OP_PINC );
		if ( ! pp->isrhs )
		{
			programEmit0( pp, OP_POP );
		}
	}
	if ( DEC == lex->token )
	{
		jsppLex( lex );
		programEmit0( pp, OP_PDEC );
		if ( ! pp->isrhs )
		{
			programEmit0( pp, OP_POP );
		}
	}
}

/*
moreterms	: PLUS term moreterms
			| MINUS term moreterms
			| PLUSEQ term moreterms
			| MINSEQ term moreterms
			| TIMESEQ term moreterms
			| DIVEQ term moreterms
			| MODEEQ term moreterms
			| XOREQ term moreterms
			|
			;
 */
static void moreterms( jspplex *lex, program *pp )
{
	switch( lex->token )
	{
	case PLUSEQ:
		jsppLex( lex );
		pp->isrhs = true;
		programEmit0( pp, OP_DUP );
		expr( lex, pp );
		programEmit0( pp, OP_RVALUE );
		programEmit0( pp, OP_ADD );
		programEmit0( pp, OP_ASSIGN );
		pp->isrhs = false;
		break;
	case MINUSEQ:
		jsppLex( lex );
		pp->isrhs = true;
		programEmit0( pp, OP_DUP );
		expr( lex, pp );
		programEmit0( pp, OP_RVALUE );
		programEmit0( pp, OP_SUB );
		programEmit0( pp, OP_ASSIGN );
		pp->isrhs = false;
		break;
	case TIMESEQ:
		jsppLex( lex );
		pp->isrhs = true;
		programEmit0( pp, OP_DUP );
		expr( lex, pp );
		programEmit0( pp, OP_RVALUE );
		programEmit0( pp, OP_MULT );
		programEmit0( pp, OP_ASSIGN );
		pp->isrhs = false;
		break;
	case DIVEQ:
		jsppLex( lex );
		pp->isrhs = true;
		programEmit0( pp, OP_DUP );
		expr( lex, pp );
		programEmit0( pp, OP_RVALUE );
		programEmit0( pp, OP_DIV );
		programEmit0( pp, OP_ASSIGN );
		pp->isrhs = false;
		break;
	case MODEQ:
		jsppLex( lex );
		pp->isrhs = true;
		programEmit0( pp, OP_DUP );
		expr( lex, pp );
		programEmit0( pp, OP_RVALUE );
		programEmit0( pp, OP_MOD );
		programEmit0( pp, OP_ASSIGN );
		pp->isrhs = false;
		break;
	case XOREQ:
		jsppLex( lex );
		pp->isrhs = true;
		programEmit0( pp, OP_DUP );
		expr( lex, pp );
		programEmit0( pp, OP_RVALUE );
		programEmit0( pp, OP_XOR );
		programEmit0( pp, OP_ASSIGN );
		pp->isrhs = false;
		break;
	case OREQ:
		jsppLex( lex );
		pp->isrhs = true;
		programEmit0( pp, OP_DUP );
		expr( lex, pp );
		programEmit0( pp, OP_RVALUE );
		programEmit0( pp, OP_BINOR );
		programEmit0( pp, OP_ASSIGN );
		pp->isrhs = false;
		break;
	case ANDEQ:
		jsppLex( lex );
		pp->isrhs = true;
		programEmit0( pp, OP_DUP );
		expr( lex, pp );
		programEmit0( pp, OP_RVALUE );
		programEmit0( pp, OP_BINAND );
		programEmit0( pp, OP_ASSIGN );
		pp->isrhs = false;
		break;
	case PLUS:
		jsppLex( lex );
		term( lex, pp );
		programEmit0( pp, OP_ADD );
		break;
	case MINUS:
		jsppLex( lex );
		term( lex, pp );
		programEmit0( pp, OP_SUB );
		break;
	default:
		return;
	}
	if ( 0 == pp->errornum )
	{
		moreterms( lex, pp );
	}
}

/*
term	: factor morefactors
		|
		;
 */
static void term( jspplex *lex, program *ilp )
{
	factor( lex, ilp );
	if ( 0 == ilp->errornum )
	{
		morefactors( lex, ilp );
	}
}

/*
relop	: term moreterms
		|
		;
 */
static void relop( jspplex *lex, program *ilp )
{
	term( lex, ilp );
	if ( 0 == ilp->errornum )
	{
		moreterms( lex, ilp );
	}
}
